Trainee dashboard table grow overflow fix

--- a/src/app/pages/trainee-dashboard/trainee-dashboard.component.scss
+++ b/src/app/pages/trainee-dashboard/trainee-dashboard.component.scss
@@ -1,7 +1,7 @@
 .dashboard{
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    // height: 100vh;
     //width: 100vw;
 
 }
